# FastAPI_predict_car

./: .env  .gitignore  Procfile  README.md  create_hpass.py  crud.py  database.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  utils.py
models/: babaste_predict_car.sql
models/pkl/: catboost_model.pkl
