[tool.poetry]
name = "fastapi-predict-car"
version = "0.1.0"
description = "A FastAPI project for car price prediction"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "your_package_name"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.8.2"
jose = "^3.3.0"
joblib = "^1.1.0"
pandas = "^1.3.3"
mysqlclient = "^2.0.3"
altair = "^5.5.0"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
attrs = "^24.2.0"
bcrypt = "^3.2.0"
blinker = "^1.9.0"
cachetools = "^5.5.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
colorama = "^0.4.6"
seaborn = "^0.13.2"
selenium = "^4.27.0"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^5.0.1"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
SQLAlchemy-Utils = "^0.41.2"
sqlite-fts4 = "^1.0.3"
sqlite-utils = "^3.38"
starlette = "^0.41.3"
streamlit = "^1.40.2"
streamlit-option-menu = "^0.4.0"
tabulate = "^0.9.0"
tenacity = "^9.0.0"
threadpoolctl = "^3.5.0"
toml = "^0.10.2"
tornado = "^6.4.2"
trio = "^0.27.0"
trio-websocket = "^0.11.1"
typer = "^0.14.0"
typing_extensions = "^4.12.2"
tzdata = "^2024.2"
ujson = "^5.10.0"
urllib3 = "^2.2.3"
watchdog = "^6.0.0"
watchfiles = "^1.0.0"
webdriver-manager = "^4.0.2"
websocket-client = "^1.8.0"
websockets = "^14.1"
win32-setctime = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"